[tool.poetry]
name = "reporter"
version = "0.1.0"
description = ""
authors = ["Axel <dev@absalon.is>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.55.1"
uvicorn = "^0.11.5"
sqlalchemy = "^1.3.17"
httpx = "^0.13.3"
sentry-sdk = "^0.14.4"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
black = "^19.10b0"
mypy = "^0.770"
flake8 = "^3.8.2"
flake8-builtins = "^1.5.3"
flake8-isort = "^3.0.0"
flake8-bugbear = "^20.1.4"
flake8-black = "^0.2.0"
flake8-comprehensions = "^3.2.2"
flake8-annotations = "^2.1.0"
ipdb = "^0.13.2"
pdbpp = "^0.10.2"
pytest = "^5.4.2"
pytest-clarity = "^0.3.0-alpha.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
